--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -1,6 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    
+    <title>Home</title>
 
-{% if var %}
-    {{ var }}
-{% else %}
-    <h1>HTML EHEH</h1>
-{% endif %}
+</head>
+<body>
+        
+    <!--
+        <div class="d-flex justify-content-between">
+            <div class="pt1">
+    
+            </div>
+            <div class="pt2">
+    
+            </div>
+        </div>
+    -->
+
+    <!--
+        {% if var %}
+        {{ var }}
+        {% else %}
+        <h1>HTML EHEH</h1>
+        {% endif %}
+    -->
+
+</body>
+</html>
