--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -5,24 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     
     <title>Home</title>
 
 </head>
 <body>
-        
-    <!--
-        <div class="d-flex justify-content-between">
-            <div class="pt1">
     
-            </div>
-            <div class="pt2">
-    
-            </div>
+    <div class="container">
+
+        <div class="pt1">
+            sdfa
         </div>
-    -->
+        
+        <div class="pt2">
+            sfs
+        </div>
+    </div>
+    
 
     <!--
         {% if var %}
