--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -1,21 +1,8 @@
 body{
-    background-color: purple;
-  }
-
-div {
-  background-color: palevioletred;
+  background-color: rgb(141, 76, 76);
+  color: white;
 }
 
-.container{
-  display: flex;
-  flex-direction: row;
-}
-
-.pt1{
-  min-height: 100%;
-  width: 75%;
-}
-
-.pt2{
-  height: 500px;
+.fb{
+  color: aliceblue;
 }
