--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -1,37 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    
-    <title>Home</title>
-
-</head>
-<body>
-    
-    <div class="container">
-
-        <div class="pt1">
-            sdfa
-        </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <div class="pt2">
-            sfs
-        </div>
-    </div>
-    
+        {% load static %}
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        
+        <title>Home</title>
 
-    <!--
-        {% if var %}
-        {{ var }}
-        {% else %}
-        <h1>HTML EHEH</h1>
-        {% endif %}
-    -->
+    </head>
+    <body>
+        aufj
+        <div class="fb"> dfghj</div>
 
-</body>
+        <!--
+            {% if var %}
+            {{ var }}
+            {% else %}
+            <h1>HTML EHEH</h1>
+            {% endif %}
+        -->
+
+    </body>
 </html>
