created admin, need to check why my data isn't being stored in the db

--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -13,7 +13,9 @@
     </head>
     <body>
         aufj
-        <div class="fb"> dfghj</div>
+        <div class="fb">
+            {{ data.date }}
+        </div>
 
         <!--
             {% if var %}
