--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -1,8 +1,8 @@
 body{
-  background-color: rgb(141, 76, 76);
-  color: white;
+  background-color: rgb(67, 43, 43);
+  color: rgb(35, 29, 29);
 }
 
 .fb{
-  color: aliceblue;
+  color: black;
 }
