--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -8,6 +8,7 @@
         {% load static %}
         <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
         
+        <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
         <title>Home</title>
 
     </head>
