--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -14,6 +14,9 @@
     </head>
     <body>
 
+        <header>
+            <a href="">Login</a>
+        </header>
         
         <div>
             <h1>Welcome!</h1>
@@ -24,9 +27,9 @@
         </div>
         
         <footer>
-            <span>About</span>
-            <span>FAQs</span>
-            <span>Contacts</span>
+            <a href="">About</a>
+            <a href="">FAQs</a>
+            <a href="">Contacts</a>
         </footer>
 
         <!--
