--- a/src/app/templates/request.html
+++ b/src/app/templates/request.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <form action="POST">
+    <form method="post">
 
         <div>
             <label for="nameField">Name: </label>
@@ -26,7 +26,7 @@
         </div>
 
         <div>
-            <label for="email2">Your collegue's e-mail:</label>
+            <label for="email2">Your colleague's e-mail:</label>
             <input type="email" id="email2">
         </div>
 
