--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -16,11 +16,12 @@ body > :not(header):not(footer){
 .button{
   color: white;
   width: 40px;
-  height: 10px;
+  /* height: 10px; */
   background-color: rgb(15, 15, 102);
-  padding: 1%;
+  padding: 10px;
   text-decoration: none;
   border-radius: 8%;
+  font-size: 20px;
 }
 
 header{
@@ -47,11 +48,6 @@ a{
   text-decoration: none;
 }
 
-a:hover{
-  color:rgb(216, 216, 216);
-}
-/*.button a:active*/
-
 .title{
   font-family: 'Philosopher', sans-serif;
   font-size: 200%;
@@ -59,7 +55,7 @@ a:hover{
 
 footer{
   position: fixed;
-  height: 10%;
+  height: 8%;
   background-color: rgb(30, 10, 102);
   bottom: 0px;
   left: 0px;
@@ -90,3 +86,8 @@ form > div{
   display: flex;
   flex-direction: column;
 }
+
+a:hover{
+  color:rgb(216,216,216);
+}
+/*.button a:active*/
