--- a/src/app/templates/email.html
+++ b/src/app/templates/email.html
@@ -3,9 +3,5 @@
     <br>
     Click on the link below:
     <br>
-    {% if first %}
-    http://{{ domain }}{% url 'confirmRequest1' ridb64=rid token=token %}
-    {% else %}
-    http://{{ domain }}{% url 'confirmRequest2' ridb64=rid token=token %}
-    {% endif %}
+    http://{{domain}}{% url 'confirm' %}
 {% endautoescape %}
