--- a/src/app/templates/email.html
+++ b/src/app/templates/email.html
@@ -1,7 +1,9 @@
 {% autoescape on %}
     Confirm your request, {{ user.name }}
-    <br>
     Click on the link below:
-    <br>
-    http://{{domain}}{% url 'confirm' %}
+    {% if first %}
+    http://{{ domain }}{% url 'confirmRequest1' ridb64=rid token=tokenV %}
+    {% else %}
+    http://{{ domain }}{% url 'confirmRequest2' ridb64=rid token=tokenV %}
+    {% endif %}
 {% endautoescape %}
