added new static files

--- a/src/app/templates/default.html
+++ b/src/app/templates/default.html
@@ -23,9 +23,9 @@
     </header>
     
     <footer>
-        <a href="">About</a>
-        <a href="">FAQs</a>
-        <a href="">Contacts</a>
+        <a href="{% url 'About us' %}">About</a>
+        <a href="{% url 'FAQs' %}">FAQs</a>
+        <a href="{% url 'Contacts' %}">Contacts</a>
     </footer>
     
 </body>
