added more file imports and edited css

--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -22,15 +22,8 @@
                 File a request!
             </p>
             <a class="button" href="{% url 'make request' %}">Make a Request</a>
+            <a class="button" href="{% url 'view requests' %}">View Requests</a>
         </div>
-
-        <!--
-            {% if var %}
-            {{ var }}
-            {% else %}
-            <h1>HTML EHEH</h1>
-            {% endif %}
-        -->
 
     </body>
 </html>
