--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -2,7 +2,7 @@ body{
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  margin-bottom: 10%;
+  /*margin-bottom: 10%;*/
   margin: 0;
 }
 
@@ -10,7 +10,7 @@ body > :not(header):not(footer){
   margin-left: 3%;
   margin-right: 3%;
   margin-top: 2%;
-  margin-bottom: 3%;
+  margin-bottom: 6%;
 }
 
 .button{
@@ -22,6 +22,7 @@ body > :not(header):not(footer){
   text-decoration: none;
   border-radius: 8%;
   font-size: 20px;
+  margin: 3%;
 }
 
 header{
@@ -55,7 +56,7 @@ a{
 
 footer{
   position: fixed;
-  height: 9%;
+  height: 10%;
   background-color: rgb(30, 10, 102);
   bottom: 0px;
   left: 0px;
