--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -22,7 +22,7 @@ body > :not(header):not(footer){
   text-decoration: none;
   border-radius: 8%;
   font-size: 20px;
-  margin: 3%;
+  margin-bottom: 2%;
 }
 
 header{
