--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -56,7 +56,7 @@ a{
 
 footer{
   position: fixed;
-  height: 10%;
+  height: 60px;
   background-color: rgb(30, 10, 102);
   bottom: 0px;
   left: 0px;
