--- a/src/app/templates/default.html
+++ b/src/app/templates/default.html
@@ -19,7 +19,11 @@
 
     <header>
         <a href="/" class="title">Swapping</a>
-        <a href="">Login</a>
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">Log Out</a>
+        {% else %}
+        <a href="{% url 'login' %}">Login</a>
+        {% endif %}
     </header>
     
     <footer>
@@ -27,6 +31,7 @@
         <a href="{% url 'FAQs' %}">FAQs</a>
         <a href="{% url 'Contacts' %}">Contacts</a>
     </footer>
+    
     
 </body>
 </html>
