--- a/src/app/templates/admin/viewrequests.html
+++ b/src/app/templates/admin/viewrequests.html
@@ -7,7 +7,7 @@
     
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../../static/img/favicon.ico">
 
     <title>Requests</title>
 </head>
