--- a/src/app/templates/default.html
+++ b/src/app/templates/default.html
@@ -20,6 +20,7 @@
     <header>
         <a href="/" class="title">Swapping</a>
         {% if user.is_authenticated %}
+        <a href="{% url 'admin overview' %}">Admin</a>
         <a href="{% url 'logout' %}">Log Out</a>
         {% else %}
         <a href="{% url 'login' %}">Login</a>
