--- a/src/app/templates/admin/confTimeout.html
+++ b/src/app/templates/admin/confTimeout.html
@@ -15,5 +15,18 @@
 
     {% include "default.html" %}
 
+    <form method="post">
+
+        <div class = "form">
+            {% csrf_token %}
+            {{ form }}
+        </div>
+        <div>
+            <input type="submit" value="Submit">
+            <input type="reset" value="Reset">
+        </div>
+
+    </form>
+
 </body>
 </html>
