--- a/src/app/templates/default.html
+++ b/src/app/templates/default.html
@@ -18,13 +18,17 @@
 <body>
 
     <header>
-        <a href="/" class="title">Swapping</a>
-        {% if user.is_authenticated %}
-        <a href="{% url 'admin overview' %}">Admin</a>
-        <a href="{% url 'logout' %}">Log Out</a>
-        {% else %}
-        <a href="{% url 'login' %}">Login</a>
-        {% endif %}
+        <div class="header-row">
+            <a href="/" class="title">Swapping</a>
+            <div class="log">
+                {% if user.is_authenticated %}
+                <a href="{% url 'admin overview' %}">Admin</a>
+                <a href="{% url 'logout' %}">Log Out</a>
+                {% else %}
+                <a href="{% url 'login' %}">Login</a>
+                {% endif %}
+            </div>
+        </div>
     </header>
     
     <footer>
