--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -9,8 +9,15 @@ body{
 body > :not(header):not(footer){
   margin-left: 3%;
   margin-right: 3%;
-  margin-top: 2%;
-  margin-bottom: 6%;
+}
+
+body .content{
+  padding-bottom: 100px ;  
+}
+
+body .pageContainer{
+  position: relative;
+  min-height: 100%;
 }
 
 .button{
@@ -58,7 +65,7 @@ a{
 }
 
 footer{
-  min-height: 60px;
+  min-height: 100px;
   background-color: rgb(171, 171, 171);
   bottom: 0px;
   left: 0px;
@@ -67,6 +74,7 @@ footer{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  box-shadow: 0 50vh 0 50vh rgb(171, 171, 171);
 }
 
 footer > a{
