--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -1,30 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        {% load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-        <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
-        
-        <title>Home</title>
+{% extends "default.html" %}
 
-    </head>
-    <body>
+{% block title %}Home{% endblock %}
 
-        {% include "default.html" %}
+{% block content %}
+<div>
+    <h1>Welcome!</h1>
+    <p>Do you want to change classes with a friend?
+        File a request!
+    </p>
+    <a class="button" href="{% url 'make request' %}">Make a Request</a>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>ospakif
 
-        <div>
-            <h1>Welcome!</h1>
-            <p>Do you want to change classes with a friend?
-                File a request!
-            </p>
-            <a class="button" href="{% url 'make request' %}">Make a Request</a>
-        </div>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br>ospakif
-
-    </body>
-</html>
+{% endblock %}
