--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -24,7 +24,7 @@ body .pageContainer{
   color: white;
   width: 40px;
   /* height: 10px; */
-  background-color: rgb(213, 200, 255);
+  background-color: rgb(107, 83, 170);
   padding: 10px;
   text-decoration: none;
   border-radius: 8%;
@@ -42,7 +42,7 @@ header{
   top: 0;
   right: 0;
   left: 0;
-  background-color: rgb(216, 203, 255);
+  background-color: rgb(156, 133, 222);
   min-height: 80px;
   padding: 5px;
 }
@@ -105,4 +105,17 @@ a:hover{
 
 .requestsTable{
   margin: 2%;
+}
+
+.steps .circle{
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  background-color: rgb(110, 65, 135);
+  display: inline-block;
+}
+
+.steps .circle .circle-text{
+  text-align: center;
+  position: relative;
 }
