frontend home page

--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -3,17 +3,11 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+
 <div>
     <h1>Welcome!</h1>
     
     How it works?
-    Step 1) Find someone through your student group chats that wants to change classes with you!
-    Step 2) File for a request
-    Step 3) You will receive an email with a confirmation link
-    Step 4) After you accept the request through the email link, your colleague is going to receive the same email with a confirmation link
-    Step 5) After both students accept the request, an administrator is going to export the new classes allocation to sigarra. 
-
-    Rules:
     1) Cant have more than one request for the same uc at the same timeout
     2) If you dont confirm your request in (timeout) then it will be longer valid and if you still want to change shifts then you should file for a new one. 
     3) You are able to check your request status through a link. This link is sent after you first confirm your request.
@@ -27,9 +21,65 @@
     <br>
     <br>
     <div class="steps">
-        <div class="circle">
-            <div class="circle-text">
-                1
+        <div class="step-number">
+            <div class="circle">
+                <div class="circle-text">
+                    1
+                </div>
+            </div>
+            <div class="rectangle">
+                <div class="rectangle-text">
+                    Find someone through your student group chats that wants to change classes with you!
+                
+                </div>
+            </div>
+        </div>
+        <div class="step-number">
+            <div class="circle">
+                <div class="circle-text">
+                    2
+                </div>
+            </div>
+            <div class="rectangle">
+                <div class="rectangle-text">
+                    File for a request.
+                </div>
+            </div>
+        </div>
+        <div class="step-number">
+            <div class="circle">
+                <div class="circle-text">
+                    3
+                </div>
+            </div>
+            <div class="rectangle">
+                <div class="rectangle-text">
+                    You will receive an email with a confirmation link.                     
+                </div>
+            </div>
+        </div>
+        <div class="step-number">
+            <div class="circle">
+                <div class="circle-text">
+                    4
+                </div>
+            </div>
+            <div class="rectangle">
+                <div class="rectangle-text">
+                    After you accept the request through the email link, your colleague is going to receive the same email with a confirmation link
+                </div>
+            </div>
+        </div>
+        <div class="step-number">
+            <div class="circle">
+                <div class="circle-text">
+                    5
+                </div>
+            </div>
+            <div class="rectangle">
+                <div class="rectangle-text">
+                    After both students accept the request, an administrator is going to export the new classes allocation to sigarra. 
+                </div>
             </div>
         </div>
     </div>
