--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -107,6 +107,18 @@ a:hover{
   margin: 2%;
 }
 
+.steps{
+  display: flex;
+  flex-direction: column;
+}
+
+.steps .step-number{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 10px;
+}
+
 .steps .circle{
   border-radius: 50%;
   height: 100px;
@@ -124,4 +136,23 @@ a:hover{
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   font-size: 60px;
+}
+
+.steps .rectangle{
+  min-height: 85px;
+  width: 600px;
+  background-color: rgb(212, 212, 212);
+  margin-left: 20px;
+  border-radius: 20px;
+  word-break:normal;
+  align-items: center;
+  display: flex;
+  align-items: center; /* align vertical */
+}
+
+.steps .rectangle .rectangle-text{
+  margin-top: auto;
+  margin-bottom: auto;
+  font-size: 20px;
+  padding: 20px;
 }
