--- a/src/app/templates/request.html
+++ b/src/app/templates/request.html
@@ -1,34 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "default.html" %}
 
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
+{% block title %}Home{% endblock %}
 
-    <title>Request</title>
-</head>
-<body>
+{% block content %}
 
-    {% include "default.html" %}
+<form method="post">
 
+    <div class="form">
+        {% csrf_token %}
+        {{ form }}
+    </div>
+    <div>
+        <input type="submit" value="Submit">
+        <input type="reset" value="Reset">
+    </div>
 
-    {{ time }}
-    <form method="post">
+</form>
 
-        <div class = "form">
-            {% csrf_token %}
-            {{ form }}
-        </div>
-        <div>
-            <input type="submit" value="Submit">
-            <input type="reset" value="Reset">
-        </div>
-
-    </form>
-    
-</body>
-</html>
+{% endblock %}
