--- a/src/app/templates/about.html
+++ b/src/app/templates/about.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
+{% extends "default.html" %}
 
-    <title>About</title>
-</head>
-<body>
+{% block title %}Home{% endblock %}
 
-    {% include "default.html" %}
-    
-</body>
-</html>
+{% block content %}
+{% endblock %}
