--- a/src/app/templates/admin/export.html
+++ b/src/app/templates/admin/export.html
@@ -1,31 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="icon" type="image/x-icon" href="../../static/img/favicon.ico">
+{% extends "default.html" %}
 
-    <title>Export Data</title>
-</head>
-<body>
+{% block title %}Home{% endblock %}
 
-    {% include "default.html" %}
-    
-    <form method="post">
+{% block content %}
 
-        <div class = "form">
-            {% csrf_token %}
-            {{ form }}
-        </div>
-        <div>
-            <input type="submit" value="Submit">
-        </div>
+<form method="post">
 
-    </form>
-    
-</body>
-</html>
+    <div class="form">
+        {% csrf_token %}
+        {{ form }}
+    </div>
+    <div>
+        <input type="submit" value="Submit">
+    </div>
+
+</form>
+
+{% endblock %}
