--- a/src/app/templates/registration/login.html
+++ b/src/app/templates/registration/login.html
@@ -1,25 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
+{% extends "default.html" %}
 
-    <title>Log-in</title>
-</head>
-<body>
+{% block title %}Home{% endblock %}
 
-    {% include "default.html" %}
-    
-    <h2>Log In</h2>
-    <form method="post">
+{% block content %}
+
+<h2>Log In</h2>
+<form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Log In</button>
-    </form>
-</body>
-</html>
+</form>
+
+{% endblock %}
