--- a/src/app/templates/about.html
+++ b/src/app/templates/about.html
@@ -3,4 +3,13 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+
+<p>
+    1) Cant have more than one request for the same uc at the same timeout
+    2) If you dont confirm your request in (timeout) then it will be longer valid and if you still want to change shifts then you should file for a new one. 
+    3) You are able to check your request status through a link. This link is sent after you first confirm your request.
+    Possible status: Not concluded, Request concluded, Accepted request  
+
+</p>
+
 {% endblock %}
