--- a/src/app/templates/default.html
+++ b/src/app/templates/default.html
@@ -37,7 +37,7 @@
     </div>
 
     <footer>
-        <a href="{% url 'About us' %}">About</a>
+        <a href="{% url 'About' %}">About</a>
         <a href="{% url 'FAQs' %}">FAQs</a>
         <a href="{% url 'Contacts' %}">Contacts</a>
     </footer>
