--- a/src/app/templates/registration/login.html
+++ b/src/app/templates/registration/login.html
@@ -8,7 +8,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Log In</button>
+    <button class="" type="submit">Log In</button>
 </form>
 
 {% endblock %}
