--- a/src/app/templates/default.html
+++ b/src/app/templates/default.html
@@ -7,7 +7,7 @@
 
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="icon" type="image/x-icon" href="../static/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
