--- a/src/app/templates/admin/overview.html
+++ b/src/app/templates/admin/overview.html
@@ -9,5 +9,8 @@
 <a class="button" href="{% url 'import data' %}">Import data</a>
 <a class="button" href="{% url 'export data' %}">Export data</a>
 <a class="button" href="{% url 'configure timeout' %}">Configure Timeout</a>
+<a class="button" href="{% url 'export data' %}">Export data</a>
+<a class="button" href="{% url 'request allowance' %}">Request Allowance</a>
 
+<div class="filler-med"></div>
 {% endblock %}
