--- a/src/app/templates/contacts.html
+++ b/src/app/templates/contacts.html
@@ -3,4 +3,15 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+
+Email:
+
+Subject:
+Having trouble getting link? [LINK FAIL]
+Didn't receive an email to confirm your request? [NO EMAIL]
+Have a suggestion? [SUGGESTION]
+Want to undo an exchange if the request is still not deployed? [CANCEL]
+Have a question related to the process? [PROCESS QUESTION]
+For other matters: [OTHER] + insert title
+
 {% endblock %}
