--- a/src/app/templates/faqs.html
+++ b/src/app/templates/faqs.html
@@ -1,6 +1,22 @@
 {% extends "default.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}FAQs{% endblock %}
 
 {% block content %}
+
+I didn't get any email to confirm, what now?
+Send 
+
+The link sent is invalid
+
+I want to report a bug, where should I do it?
+In contacts you can find a form
+
+I want to rate this website, where should i do it?
+About forms
+
+Do you still need help? If yes go to contact forms and fill with your question
+
+<div class="filler-big"></div>
+
 {% endblock %}
