--- a/src/app/templates/home.html
+++ b/src/app/templates/home.html
@@ -79,11 +79,13 @@
         </div>
     </div>
     
-    <a class="button" href="{% url 'make request' %}">Make a Request</a>
+    <div class="center">
+        <a class="button special" href="{% url 'make request' %}">Make a Request</a>
+        <p class="small-text">
+            Check the <a href="{% url 'About' %}">about</a> section for more details.
+        </p>
+    </div>
     
-    <p>
-        Check the <a href="{% url 'About' %}">about</a> section for more details.
-    </p>
 </div>
 
 
