--- a/src/app/templates/admin/overview.html
+++ b/src/app/templates/admin/overview.html
@@ -10,7 +10,7 @@
 <a class="button" href="{% url 'export data' %}">Export data</a>
 <a class="button" href="{% url 'configure timeout' %}">Configure Timeout</a>
 <a class="button" href="{% url 'request allowance' %}">Request Allowance</a>
-<a class="button" href="{% url 'clean data' %}">Clean Data</a>
+<a class="button" href="{% url 'confirm clean' %}">Clean Data</a>
 
 <div class="filler-med"></div>
 {% endblock %}
