rating now possible

--- a/src/app/templates/faqs.html
+++ b/src/app/templates/faqs.html
@@ -4,18 +4,61 @@
 
 {% block content %}
 
-I didn't get any email to confirm, what now?
-Send 
+<p>
+    <span class = "question">
+        I didn't get any email to confirm, what now? <br>
+    </span>
+    <span class="answer">
+        dsfij
+    </span>
+</p>
 
-The link sent is invalid
+<p>
+    <span class = "question">
+        The link sent is invalid, what now? <br>
+    </span>
+    <span class="answer">
+        You'll have to send an email reporting this if you don't want your request to be cancelled. You can find the email in <a href="/contacts/">contacts</a> and more instructions on how to proceed.
+    </span>
+</p>
 
-I want to report a bug, where should I do it?
-In contacts you can find a form
+<p>
+    <span class = "question">
+        I want to report a bug, where should I do it?<br>
+    </span>
+    <span class="answer">
+        You can report bugs via email.
+        Check <a href="/contacts/">contacts</a> for more information.
+    </span>
+</p>
 
-I want to rate this website, where should i do it?
+<p>
+    <span class = "question">
+        I want to rate this website, where should i do it?<br>
+    </span>
+    <span class="answer">
+        You can rate this website <a href="/rate">here</a>. If you have any suggestion or critic leave it in the text area so we can improve.
+    </span>
+</p>
+
+<p>
+    <span class = "question">
+        I didn't get any email to confirm my request, what now? <br>
+    </span>
+    <span class="answer">
+        In the homepage (<a href="/">home</a>) you can find the different steps in a request process. The "Student 1" of the request form will receive email first,
+        only after this first student confirms the request (clicking in the link sent in the email), the second student will receive his or her confirmation mail.
+        If this conditions don't apply to you and your colleague (for example, the first student didn't receive their email after successfully filling for a request) you should
+        contact us via email. More details can be found in <a href="/contacts/">contacts</a>.
+    </span>
+</p>
+
+
 About forms
 
 Do you still need help? If yes go to contact forms and fill with your question
+
+<div class="center"><b>If your question is still unanswered send an email to swapclasses@fe.up.pt with the subject "[QUESTION] (...)".</b></div>
 
 <div class="filler-big"></div>
 
