--- a/src/app/static/style.css
+++ b/src/app/static/style.css
@@ -1,7 +1,7 @@
 body{
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   /*margin-bottom: 10%;*/
   margin: 0;
 }
@@ -213,4 +213,13 @@ form > div{
 
 .error{
   color: red;
+}
+
+.question{
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.answer{
+  margin-left: 5px;
 }
